Release 1.2.0, update license and cleanup a bit